delete debug folder & change debugger to openOCD

--- a/bootloader/bootloader.ioc
+++ b/bootloader/bootloader.ioc
@@ -9,34 +9,9 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
-Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PG11
-Mcu.Pin24=PG13
-Mcu.Pin25=PB7
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=27
+Mcu.Pin0=PA14
+Mcu.Pin1=VP_SYS_VS_Systick
+Mcu.PinsNb=2
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
@@ -53,104 +28,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
-PA1.Locked=true
-PA1.Signal=ETH_REF_CLK
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USB_ID
-PA10.Locked=true
-PA10.Signal=USB_OTG_FS_ID
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=USB_DM
-PA11.Locked=true
-PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=USB_DP
-PA12.Locked=true
-PA12.Signal=USB_OTG_FS_DP
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=TMS
-PA13.Locked=true
-PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
-PA2.Locked=true
-PA2.Signal=ETH_MDIO
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
-PA7.Locked=true
-PA7.Signal=ETH_CRS_DV
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USB_SOF [TP1]
-PA8.Locked=true
-PA8.Signal=USB_OTG_FS_SOF
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=USB_VBUS
-PA9.Locked=true
-PA9.Signal=USB_OTG_FS_VBUS
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LD1 [Green]
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
-PB13.Locked=true
-PB13.Signal=ETH_TXD1
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
-PB14.Locked=true
-PB14.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=LD2 [Blue]
-PB7.Locked=true
-PB7.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
-PC1.Locked=true
-PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
-PC13.Locked=true
-PC13.Signal=GPXTI13
-PC14/OSC32_IN.Locked=true
-PC14/OSC32_IN.Signal=RCC_OSC32_IN
-PC15/OSC32_OUT.Locked=true
-PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
-PC4.Locked=true
-PC4.Signal=ETH_RXD0
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
-PC5.Locked=true
-PC5.Signal=ETH_RXD1
-PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
-PD8.Locked=true
-PD8.Signal=USART3_TX
-PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
-PD9.Locked=true
-PD9.Signal=USART3_RX
-PG11.GPIOParameters=GPIO_Label
-PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
-PG11.Locked=true
-PG11.Signal=ETH_TX_EN
-PG13.GPIOParameters=GPIO_Label
-PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
-PG13.Locked=true
-PG13.Signal=ETH_TXD0
-PH0/OSC_IN.GPIOParameters=GPIO_Label
-PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
-PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Signal=RCC_OSC_IN
-PH1/OSC_OUT.Locked=true
-PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -172,8 +53,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=bootlaoder.ioc
-ProjectManager.ProjectName=bootlaoder
+ProjectManager.ProjectFileName=bootloader.ioc
+ProjectManager.ProjectName=bootloader
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -242,8 +123,6 @@ RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
 RCC.WatchDogFreq_Value=32000
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F439ZI
