--- a/target-application/application_1/application1.ioc
+++ b/target-application/application_1/application1.ioc
@@ -1,17 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
-BOOT0.Locked=true
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Expand Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F439ZIT6
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IPNb=3
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -35,36 +31,31 @@ Mcu.Pin24=PA14
 Mcu.Pin25=PG11
 Mcu.Pin26=PG13
 Mcu.Pin27=PB7
-Mcu.Pin28=BOOT0
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=31
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true\:true\:false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -264,8 +255,6 @@ RCC.VcooutputI2SQ=96000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F439ZI
