--- a/target-application/application_1/application1.ioc
+++ b/target-application/application_1/application1.ioc
@@ -100,7 +100,7 @@ PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LD1 [Green]
+PB0.GPIO_Label=green_led[Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
@@ -108,7 +108,7 @@ PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
+PB14.GPIO_Label=red_led[Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
@@ -120,7 +120,7 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=push_btn [B1]
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
