--- a/target-application/application_2/application2.ioc
+++ b/target-application/application_2/application2.ioc
@@ -107,11 +107,11 @@ PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
+PB14.GPIO_Label=red_led [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=d[Blue]
+PB7.GPIO_Label=blue_led[Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
@@ -119,7 +119,7 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=push_btn[B1]
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
