--- a/target-application/application_2/application2.ioc
+++ b/target-application/application_2/application2.ioc
@@ -118,8 +118,9 @@ PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=push_btn[B1]
+PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
