solve recieving big data issues

--- a/development projects/Integration 1 - Node, Fota master, Target/server/server.ioc
+++ b/development projects/Integration 1 - Node, Fota master, Target/server/server.ioc
@@ -9,10 +9,12 @@ FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=169.254.084.059
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
-LWIP.IP_ADDRESS=169.254.084.057
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,TCP_MSS,MEM_SIZE
+LWIP.IP_ADDRESS=169.254.084.058
 LWIP.LWIP_DHCP=0
+LWIP.MEM_SIZE=10*1024
 LWIP.NETMASK_ADDRESS=255.255.000.000
+LWIP.TCP_MSS=1024
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
@@ -224,7 +226,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LWIP_Init-LWIP-false-HAL-false
 RCC.48MHZClocksFreq_Value=90000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
