--- a/development projects/Integration 1 - Node, Fota master, Target/FotaMaster/FotaMaster.ioc
+++ b/development projects/Integration 1 - Node, Fota master, Target/FotaMaster/FotaMaster.ioc
@@ -9,10 +9,12 @@ FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=169.254.084.059
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEMP_NUM_TCP_SEG,TCP_SND_QUEUELEN
 LWIP.IP_ADDRESS=169.254.084.058
 LWIP.LWIP_DHCP=0
+LWIP.MEMP_NUM_TCP_SEG=100
 LWIP.NETMASK_ADDRESS=255.255.000.000
+LWIP.TCP_SND_QUEUELEN=100
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
