solve (TCP Spurious Retransmission Issue)

--- a/development projects/UDS_implementation/netconnClient_test2/Netconn_tcp_client.ioc
+++ b/development projects/UDS_implementation/netconnClient_test2/Netconn_tcp_client.ioc
@@ -14,10 +14,17 @@ HASH.pKey=00 01 02 03 04 05 06 07 08 09 0A 0B 0C 0D 0E 0F 10
 HASH.pKeyInput=000102030405060708090A0B0C0D0E0F10
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=169.254.084.059
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,PBUF_POOL_SIZE,MEM_SIZE
 LWIP.IP_ADDRESS=169.254.084.058
 LWIP.LWIP_DHCP=0
+LWIP.MEMP_NUM_TCP_SEG=100
+LWIP.MEM_SIZE=10*1024
 LWIP.NETMASK_ADDRESS=255.255.000.000
+LWIP.PBUF_POOL_BUFSIZE=1200
+LWIP.PBUF_POOL_SIZE=20
+LWIP.TCP_MSS=1024
+LWIP.TCP_SND_BUF=8192
+LWIP.TCP_SND_QUEUELEN=100
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
@@ -86,7 +93,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
@@ -325,3 +332,4 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-F439ZI
 boardIOC=true
+isbadioc=false
