--- a/development projects/UDS_implementation/UDS_server_test/netconnServer_test2.ioc
+++ b/development projects/UDS_implementation/UDS_server_test/netconnServer_test2.ioc
@@ -14,13 +14,18 @@ HASH.pKey=00 01 02 03 04 05 06 07 08 09 0A 0B 0C 0D 0E 0F 10
 HASH.pKeyInput=000102030405060708090A0B0C0D0E0F10
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=169.254.084.058
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_WND,TCP_MSS
-LWIP.IP_ADDRESS=169.254.084.058
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_WND,TCP_MSS,PBUF_POOL_BUFSIZE,TCP_SND_BUF,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,LWIP_TCP_SACK_OUT
+LWIP.IP_ADDRESS=169.254.084.057
 LWIP.LWIP_DHCP=0
-LWIP.MEM_SIZE=10*1024
+LWIP.LWIP_TCP_SACK_OUT=1
+LWIP.MEMP_NUM_TCP_SEG=100
+LWIP.MEM_SIZE=21*1024
 LWIP.NETMASK_ADDRESS=255.255.000.000
-LWIP.TCP_MSS=1025
-LWIP.TCP_WND=4096
+LWIP.PBUF_POOL_BUFSIZE=1500
+LWIP.TCP_MSS=1426
+LWIP.TCP_SND_BUF=11408
+LWIP.TCP_SND_QUEUELEN=100
+LWIP.TCP_WND=11408
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=CRC
