--- a/development projects/UDS_implementation/UDS_client/UDS_client.ioc
+++ b/development projects/UDS_implementation/UDS_client/UDS_client.ioc
@@ -5,7 +5,7 @@ ETH.PhyAddress=0
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=UDSTask,24,128,StartUDSTask,Default,NULL,Dynamic,NULL,NULL;UartTask,25,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=UdsTask,24,128,StartUdsTask,Default,NULL,Dynamic,NULL,NULL;UartTask,25,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 HASH.IPParameters=SecureHashAlgorithmType,KeySize,pKeyInput,pKey
@@ -14,20 +14,30 @@ HASH.SecureHashAlgorithmType=HMAC SHA256
 HASH.pKey=00 01 02 03 04 05 06 07 08 09 0A 0B 0C 0D 0E 0F 10
 HASH.pKeyInput=000102030405060708090A0B0C0D0E0F10
 KeepUserPlacement=false
-LWIP.GATEWAY_ADDRESS=169.254.084.059
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,MEMP_NUM_TCP_SEG,PBUF_POOL_SIZE,PBUF_POOL_BUFSIZE,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN
+LWIP.ETH_RX_BUFFER_SIZE=1524
+LWIP.GATEWAY_ADDRESS=169.254.084.058
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,MEMP_NUM_TCP_SEG,PBUF_POOL_SIZE,PBUF_POOL_BUFSIZE,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,ETH_RX_BUFFER_SIZE,PHY Driver,heth,gnetif,ipaddr,netmask,gw,PHY,LWIP_RAM_HEAP_POINTER,MEMP_NUM_ALTCP_PCB
 LWIP.IP_ADDRESS=169.254.084.058
 LWIP.LWIP_DHCP=0
+LWIP.LWIP_RAM_HEAP_POINTER=0x30044000
+LWIP.MEMP_NUM_ALTCP_PCB=0
 LWIP.MEMP_NUM_TCP_SEG=100
 LWIP.MEM_SIZE=21*1024
-LWIP.NETMASK_ADDRESS=255.255.255.000
+LWIP.NETMASK_ADDRESS=255.255.000.000
 LWIP.PBUF_POOL_BUFSIZE=1500
 LWIP.PBUF_POOL_SIZE=20
+LWIP.PHY=LAN8742A_PHY_ADDRESS
+LWIP.PHY\ Driver=Choose/LAN8742
 LWIP.TCP_MSS=1426
 LWIP.TCP_SND_BUF=11408
 LWIP.TCP_SND_QUEUELEN=100
 LWIP.TCP_WND=11408
 LWIP.Version=v2.1.2_Cube
+LWIP.gnetif=0
+LWIP.gw=0
+LWIP.heth=0
+LWIP.ipaddr=0
+LWIP.netmask=0
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
 Mcu.IP1=FREERTOS
@@ -48,7 +58,7 @@ Mcu.Pin12=PD5
 Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin14=VP_HASH_VS_HASH
 Mcu.Pin15=VP_LWIP_VS_Enabled
-Mcu.Pin16=VP_SYS_VS_tim6
+Mcu.Pin16=VP_SYS_VS_tim1
 Mcu.Pin2=PC1
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -77,9 +87,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
-NVIC.TimeBase=TIM6_DAC_IRQn
-NVIC.TimeBaseIP=TIM6
+NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -136,49 +146,47 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false
-RCC.48MHZClocksFreq_Value=48000000
+RCC.48MHZClocksFreq_Value=51428571.428571425
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
-RCC.AHBFreq_Value=168000000
+RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=42000000
-RCC.APB1TimFreq_Value=84000000
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimCLKDivider=2
-RCC.APB2TimFreq_Value=168000000
-RCC.CortexFreq_Value=168000000
-RCC.EthernetFreq_Value=168000000
-RCC.FCLKCortexFreq_Value=168000000
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
+RCC.CortexFreq_Value=180000000
+RCC.EthernetFreq_Value=180000000
+RCC.FCLKCortexFreq_Value=180000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=168000000
+RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=24500000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.MCO2PinFreq_Value=168000000
+RCC.MCO2PinFreq_Value=180000000
 RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=4
+RCC.PLLCLKFreq_Value=180000000
+RCC.PLLM=8
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLN=168
+RCC.PLLN=180
 RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLQCLKFreq_Value=51428571.428571425
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI_AClocksFreq_Value=24500000
 RCC.SAI_BClocksFreq_Value=24500000
-RCC.SYSCLKFreq_VALUE=168000000
+RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=72000000
@@ -198,7 +206,7 @@ RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutput2Freq_Value=8000000
-RCC.VCOOutputFreq_Value=336000000
+RCC.VCOOutputFreq_Value=360000000
 RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
@@ -213,8 +221,8 @@ VP_HASH_VS_HASH.Mode=HASH_Activate
 VP_HASH_VS_HASH.Signal=HASH_VS_HASH
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
-VP_SYS_VS_tim6.Mode=TIM6
-VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-F439ZI
 boardIOC=true
 isbadioc=false
