--- a/release projects/Target1_ECU_Application/target1_application.ioc
+++ b/release projects/Target1_ECU_Application/target1_application.ioc
@@ -37,8 +37,7 @@ Mcu.IP2=LWIP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM5
-Mcu.IPNb=7
+Mcu.IPNb=6
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -96,7 +95,6 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -320,10 +318,8 @@ RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM5_CH1.0=TIM5_CH1,Input_Capture1_from_TI1
+SH.S_TIM5_CH1.0=TIM5_CH1
 SH.S_TIM5_CH1.ConfNb=1
-TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-Input_Capture1_from_TI1
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_LWIP_VS_Enabled.Mode=Enabled
