--- a/development projects/UDS_implementation/UDS_client/UDS_client_test2.ioc
+++ b/development projects/UDS_implementation/UDS_client/UDS_client_test2.ioc
@@ -4,40 +4,31 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
 FREERTOS.Tasks01=UdsTask,24,128,StartUdsTask,Default,NULL,Dynamic,NULL,NULL;UartTask,25,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 HASH.IPParameters=SecureHashAlgorithmType,KeySize,pKeyInput,pKey
 HASH.KeySize=17
 HASH.SecureHashAlgorithmType=HMAC SHA256
 HASH.pKey=00 01 02 03 04 05 06 07 08 09 0A 0B 0C 0D 0E 0F 10
 HASH.pKeyInput=000102030405060708090A0B0C0D0E0F10
 KeepUserPlacement=false
-LWIP.ETH_RX_BUFFER_SIZE=1524
 LWIP.GATEWAY_ADDRESS=169.254.084.058
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,MEMP_NUM_TCP_SEG,PBUF_POOL_SIZE,PBUF_POOL_BUFSIZE,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,ETH_RX_BUFFER_SIZE,PHY Driver,heth,gnetif,ipaddr,netmask,gw,PHY,LWIP_RAM_HEAP_POINTER,MEMP_NUM_ALTCP_PCB
+LWIP.IPParameters=MEM_SIZE,MEMP_NUM_TCP_SEG,PBUF_POOL_SIZE,PBUF_POOL_BUFSIZE,TCP_WND,TCP_MSS,TCP_SND_BUF,TCP_SND_QUEUELEN,LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
 LWIP.IP_ADDRESS=169.254.084.058
 LWIP.LWIP_DHCP=0
-LWIP.LWIP_RAM_HEAP_POINTER=0x30044000
-LWIP.MEMP_NUM_ALTCP_PCB=0
 LWIP.MEMP_NUM_TCP_SEG=100
 LWIP.MEM_SIZE=21*1024
 LWIP.NETMASK_ADDRESS=255.255.000.000
 LWIP.PBUF_POOL_BUFSIZE=1500
 LWIP.PBUF_POOL_SIZE=20
-LWIP.PHY=LAN8742A_PHY_ADDRESS
-LWIP.PHY\ Driver=Choose/LAN8742
 LWIP.TCP_MSS=1426
 LWIP.TCP_SND_BUF=11408
 LWIP.TCP_SND_QUEUELEN=100
 LWIP.TCP_WND=11408
 LWIP.Version=v2.1.2_Cube
-LWIP.gnetif=0
-LWIP.gw=0
-LWIP.heth=0
-LWIP.ipaddr=0
-LWIP.netmask=0
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
 Mcu.IP1=FREERTOS
@@ -50,24 +41,41 @@ Mcu.IP7=USART2
 Mcu.IPNb=8
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PH0/OSC_IN
-Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PD5
-Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin14=VP_HASH_VS_HASH
-Mcu.Pin15=VP_LWIP_VS_Enabled
-Mcu.Pin16=VP_SYS_VS_tim1
-Mcu.Pin2=PC1
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA7
-Mcu.Pin7=PC4
-Mcu.Pin8=PC5
-Mcu.Pin9=PB11
-Mcu.PinsNb=17
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14/OSC32_IN
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PA8
+Mcu.Pin2=PC15/OSC32_OUT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PD5
+Mcu.Pin27=PG11
+Mcu.Pin28=PG13
+Mcu.Pin29=PB7
+Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=VP_HASH_VS_HASH
+Mcu.Pin32=VP_LWIP_VS_Enabled
+Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin4=PH1/OSC_OUT
+Mcu.Pin5=PC1
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA7
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
@@ -90,31 +98,127 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
+PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=USB_ID
+PA10.Locked=true
+PA10.Signal=USB_OTG_FS_ID
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=USB_DM
+PA11.Locked=true
+PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=USB_DP
+PA12.Locked=true
+PA12.Signal=USB_OTG_FS_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=TMS
+PA13.Locked=true
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=TCK
+PA14.Locked=true
+PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
+PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
+PA7.Locked=true
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
-PB11.Mode=RMII
-PB11.Signal=ETH_TX_EN
-PB12.Mode=RMII
-PB12.Signal=ETH_TXD0
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=USB_SOF [TP1]
+PA8.Locked=true
+PA8.Signal=USB_OTG_FS_SOF
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=USB_VBUS
+PA9.Locked=true
+PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1 [Green]
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
+PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LD3 [Red]
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=LD2 [Blue]
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
+PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USER_Btn [B1]
+PC13.Locked=true
+PC13.Signal=GPXTI13
+PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Signal=RCC_OSC32_IN
+PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
+PC4.Locked=true
 PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
+PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
 PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
+PD8.Locked=true
+PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
+PD9.Locked=true
+PD9.Signal=USART3_RX
+PG11.GPIOParameters=GPIO_Label
+PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
+PG11.Locked=true
+PG11.Mode=RMII
+PG11.Signal=ETH_TX_EN
+PG13.GPIOParameters=GPIO_Label
+PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
+PG13.Locked=true
+PG13.Mode=RMII
+PG13.Signal=ETH_TXD0
+PG6.GPIOParameters=GPIO_Label
+PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
+PG6.Locked=true
+PG6.Signal=GPIO_Output
+PG7.GPIOParameters=GPIO_Label
+PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
+PG7.Locked=true
+PG7.Signal=GPIO_Input
+PH0/OSC_IN.GPIOParameters=GPIO_Label
+PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
+PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
+PH1/OSC_OUT.Locked=true
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
@@ -138,15 +242,15 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=UDS_client.ioc
-ProjectManager.ProjectName=UDS_client
+ProjectManager.ProjectFileName=UDS_client_test2.ioc
+ProjectManager.ProjectName=UDS_client_test2
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false
-RCC.48MHZClocksFreq_Value=51428571.428571425
+RCC.48MHZClocksFreq_Value=90000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=180000000
@@ -167,7 +271,7 @@ RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQCLKFreq_Value,PRESCALERUSB,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=24500000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -179,8 +283,7 @@ RCC.PLLM=8
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLN=180
-RCC.PLLQ=7
-RCC.PLLQCLKFreq_Value=51428571.428571425
+RCC.PLLQCLKFreq_Value=90000000
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
@@ -213,6 +316,8 @@ RCC.VCOSAIOutputFreq_ValueR=49000000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
