full UDS + UART flow for one target and the master with installation

--- a/development projects/UDS_implementation/UDS_client/UDS_client_test2.ioc
+++ b/development projects/UDS_implementation/UDS_client/UDS_client_test2.ioc
@@ -5,7 +5,7 @@ ETH.PhyAddress=0
 ETH.RxMode=ETH_RXINTERRUPT_MODE
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=UdsTask,24,128,StartUdsTask,Default,NULL,Dynamic,NULL,NULL;UartTask,25,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=UdsTask,24,128,StartUdsTask,Default,NULL,Dynamic,NULL,NULL;UartTask,25,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL;InstallTask,25,128,StartInstallTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
