working server on new flash memory design + configured project files

--- a/development projects/UDS_implementation/UDS_server_test/netconnServer_test2.ioc
+++ b/development projects/UDS_implementation/UDS_server_test/netconnServer_test2.ioc
@@ -7,6 +7,7 @@ FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 HASH.IPParameters=SecureHashAlgorithmType,KeySize,pKeyInput,pKey
 HASH.KeySize=17
 HASH.SecureHashAlgorithmType=HMAC SHA256
@@ -36,8 +37,9 @@ Mcu.IP4=LWIP
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=RNG
-Mcu.IP8=SYS
-Mcu.IPNb=9
+Mcu.IP8=RTC
+Mcu.IP9=SYS
+Mcu.IPNb=10
 Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -67,14 +69,15 @@ Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=VP_HASH_VS_HASH
 Mcu.Pin31=VP_LWIP_VS_Enabled
 Mcu.Pin32=VP_RNG_VS_RNG
-Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_SYS_VS_tim1
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=34
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
@@ -220,7 +223,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -243,7 +246,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_RNG_Init-RNG-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_RNG_Init-RNG-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
 RCC.48MHZClocksFreq_Value=45000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -323,6 +326,8 @@ VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-F439ZI
