--- a/development projects/UDS_implementation/UDS_server/netconnServer_test2.ioc
+++ b/development projects/UDS_implementation/UDS_server/netconnServer_test2.ioc
@@ -8,7 +8,7 @@ FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;blinkingLEDTask,24,128,startBlinkingLED,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
+GPIO.groupedBy=Show All
 HASH.IPParameters=SecureHashAlgorithmType,KeySize,pKeyInput,pKey
 HASH.KeySize=17
 HASH.SecureHashAlgorithmType=HMAC SHA256
@@ -44,39 +44,42 @@ Mcu.Name=STM32F439Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA5
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PG6
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG11
-Mcu.Pin26=PG13
-Mcu.Pin27=PB7
-Mcu.Pin28=VP_CRC_VS_CRC
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin20=PG7
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_HASH_VS_HASH
-Mcu.Pin31=VP_LWIP_VS_Enabled
-Mcu.Pin32=VP_RNG_VS_RNG
-Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_CRC_VS_CRC
+Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin33=VP_HASH_VS_HASH
+Mcu.Pin34=VP_LWIP_VS_Enabled
+Mcu.Pin35=VP_RNG_VS_RNG
+Mcu.Pin36=VP_SYS_VS_tim1
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=34
+Mcu.Pin6=PA0/WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F439ZITx
@@ -100,6 +103,8 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+PA0/WKUP.Locked=true
+PA0/WKUP.Signal=GPIO_Input
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -130,6 +135,10 @@ PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -245,7 +254,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_RNG_Init-RNG-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_HASH_Init-HASH-false-HAL-true,4-MX_RNG_Init-RNG-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_CRC_Init-CRC-false-HAL-true
 RCC.48MHZClocksFreq_Value=45000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
